Added food suggestions sections ,realtime data from amazon server

--- a/elements/routing.html
+++ b/elements/routing.html
@@ -26,7 +26,11 @@
     });
 
     page('/', function() {
-      app.route = 'dashboard';
+      app.route = 'homepage';
+    });
+
+    page('/homepage', function() {
+      app.route = 'homepage';
     });
 
     page('/dashboard', function() {
