--- a/styles/app-theme.html
+++ b/styles/app-theme.html
@@ -6,10 +6,10 @@
   :root {
       --dark-primary-color:       #0097A7;
     --default-primary-color:    #00BCD4;
-    --light-primary-color:      #B2EBF2;
+    --light-primary-color:      #26c6da;
     --text-primary-color:       #FFFFFF;
     --accent-color:             #607D8B;
-    --primary-background-color: #B2EBF2;
+    --primary-background-color: #26c6da;
     --primary-text-color:       #212121;
     --secondary-text-color:     #727272;
     --disabled-text-color:      #BDBDBD;
@@ -135,6 +135,7 @@
     }
 
   }
+
 
   /* Tablet+ */
   @media (min-width: 601px) {
