--- a/elements/elements.html
+++ b/elements/elements.html
@@ -21,8 +21,8 @@
 <link rel="import" href="../bower_components/paper-toolbar/paper-toolbar.html">
 <link rel="import" href="../bower_components/paper-toggle-button/paper-toggle-button.html">
 <link rel="import" href="../bower_components/paper-fab/paper-fab.html">
-
-
+<link rel="import" href="../bower_components/paper-button/paper-button.html">
+<link rel="import" href="../bower_components/paper-card/paper-card.html">
 <!-- Service Worker -->
 
 <link rel="import" href="../bower_components/platinum-sw/platinum-sw-cache.html">
